--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -9,3 +9,16 @@ header .logo {
     left: 20px;
     height: 100%;
 }
+header .api_status {
+    margin-left: auto;
+    width: 40px;
+    height: 40px;
+    margin-right: 30px;
+    border-radius: 50%;
+    background: #cccccc;
+    margin-bottom: auto;
+    margin-top: auto;
+}
+header .api_status.availble {
+    background: #ff545f;
+}
